<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">School Animation</string>
    <string name="activity_title">Animation</string>
    <string name="property">Property</string>
    <string name="view">View</string>
    <string name="drawable">Drawable</string>

    <string name="alpha">Alpha</string>
    <string name="scale">Scale</string>
    <string name="rotate">Rotate</string>
    <string name="translate">Translate</string>
    <string name="set">Set</string>
    <string name="click_me">CLICK ME!</string>

</resources>
